[package]
name  = "oled-helper"
version = "1.0.0-Beta"
edition = "2021"
description = "Helper tools for OLED tv/monitors"

[[bin]]
name = "OledHelper"
path = "src/main.rs"

[dependencies.windows]
# Pin to 0.58.0 exactly — the caret ^0.58 fails to resolve on some registries.
# API is identical to what we target; upgrade to 0.61+ when ready.
version = "0.58.0"
features = [
    "Win32_Graphics_GdiPlus",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Devices_Display",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_RemoteDesktop",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
png    = "0.17"
minreq = { version = "2", features = ["https"] }